<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    tools:context=".Nk_board"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.4"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passcode1"
                style="@style/PasscodeEditText"
                android:hint="@string/digit_one" />

            <EditText
                android:id="@+id/passcode2"
                style="@style/PasscodeEditText"
                android:hint="@string/digit_two" />

            <EditText
                android:id="@+id/passcode3"
                android:hint="@string/digit_three"
                style="@style/PasscodeEditText" />

            <EditText
                android:id="@+id/passcode4"
                android:hint="@string/digit_four"
                style="@style/PasscodeEditText" />

        </LinearLayout>


        <TextView
            android:id="@+id/passcode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_passcode"
            android:textSize="15sp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.6"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <LinearLayout
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:orientation="vertical"
                android:background="@drawable/numeric_button"
                android:gravity="center"
                android:clickable="true"
                android:id="@+id/one_btn"
                android:focusable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/digit_one"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/digit_one_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:orientation="vertical"
                android:background="@drawable/numeric_button"
                android:gravity="center"
                android:clickable="true"
                android:id="@+id/two_btn"
                android:focusable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/digit_two"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/digit_two_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:orientation="vertical"
                android:background="@drawable/numeric_button"
                android:gravity="center"
                android:clickable="true"
                android:id="@+id/three_btn"
                android:focusable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/digit_three"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/digit_three_text"/>
            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <LinearLayout
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:orientation="vertical"
                android:background="@drawable/numeric_button"
                android:gravity="center"
                android:clickable="true"
                android:id="@+id/four_btn"
                android:focusable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/digit_four"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/digit_four_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:orientation="vertical"
                android:background="@drawable/numeric_button"
                android:gravity="center"
                android:clickable="true"
                android:id="@+id/five_btn"
                android:focusable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/digit_five"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/digit_five_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:orientation="vertical"
                android:background="@drawable/numeric_button"
                android:gravity="center"
                android:clickable="true"
                android:id="@+id/six_btn"
                android:focusable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/digit_six"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/digit_six_text"/>
            </LinearLayout>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:orientation="vertical"
                android:background="@drawable/numeric_button"
                android:gravity="center"
                android:clickable="true"
                android:id="@+id/seven_btn"
                android:focusable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/digit_seven"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/digit_seven_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:orientation="vertical"
                android:background="@drawable/numeric_button"
                android:gravity="center"
                android:clickable="true"
                android:id="@+id/eight_btn"
                android:focusable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/digit_eight"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/digit_eight_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:orientation="vertical"
                android:background="@drawable/numeric_button"
                android:gravity="center"
                android:clickable="true"
                android:id="@+id/nine_btn"
                android:focusable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/digit_nine"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/digit_nine_text"/>
            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <View
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:orientation="vertical"
                android:background="@drawable/numeric_button"
                android:gravity="center"
                android:clickable="true"
                android:id="@+id/zero_btn"
                android:focusable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/digit_zero"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/digit_zero_text"/>
            </LinearLayout>

            <ImageButton
                android:layout_width="@dimen/passcode_btn"
                android:layout_height="@dimen/passcode_btn"
                android:layout_margin="@dimen/passcode_btn_margin"
                android:src="@mipmap/ic_action_backspace"
                android:hapticFeedbackEnabled="true"
                android:id="@+id/delete_btn"
                android:background="@android:color/transparent"
                android:contentDescription="@string/clear" />
        </TableRow>

    </TableLayout>

</LinearLayout>